--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-three/drei": "^9.21.0",
     "@react-three/fiber": "^8.3.1",
     "@types/three": "^0.143.0",
+    "classnames": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.143.0"
